--- a/index.html
+++ b/index.html
@@ -3,17 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IMÁGENES</title>
+    <title>EJERCICIO</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <section class="image-1"> 
-</section> 
-<section class="image-2"> 
-</section> 
-<section class="image-3"> 
-</section> 
-<section class="image-4"> 
-</section>
+    <h1>EJERCICIOS 20 DE FEBRERO DE 2026</h1>
+
+    <div class="imagenes">
+ <a href="/imágenes.html"> IMÁGENES</a>
+    </div>
+  
+    <div class="verde-amarillo">
+ <a href="/Degradados/verde-amarillo.html">VERDE-AMARILLO</a>
+    </div>
+  
+    <div class="rosa-azul">
+<a href="/Degradados/rosa-azul.html">ROSA-AZUL</a>
+    </div>
+
+    <div class="azul-turquesa">
+<a href="/Degradados/azul-turquesa.html">AZUL-TURQUESA</a>
+    </div>
+
+    <div class="azul-amarillo">
+        <a href="/Degradados/azul-amarillo.html"> AZUL-AMARILLO</a>
+    </div>
+    <div class="violeta-azul">
+<a href="/Degradados/violeta-azul.html">VIOLETA-AZUL</a>
+    </div>
+    <div class="tonalidades-verdes">
+        <a href="/Degradados/tonalidades-verdes.html">TONALIDADES VERDES</a>
+    </div>
+   
+   
+   
+   
+   
+    
 </body>
 </html>
